# advent-of-code-2025

./: README.md
aoc-1/: LICENSE  aoc1.cabal
aoc-1/app/: Main.hs
aoc-10/: CHANGELOG.md  aoc10.cabal
aoc-10/app/: Main.hs
aoc-11/: aoc11.cabal
aoc-11/app/: Main.hs
aoc-12/: aoc12.cabal
aoc-12/app/: Main.hs
aoc-2/: aoc2.cabal
aoc-2/app/: Main.hs
aoc-3/: CHANGELOG.md  aoc3.cabal
aoc-3/app/: Main.hs
aoc-4/: CHANGELOG.md  aoc4.cabal
aoc-4/app/: Main.hs
aoc-5/: CHANGELOG.md  aoc5.cabal
aoc-5/app/: Main.hs
aoc-6/: CHANGELOG.md  aoc6.cabal
aoc-6/app/: Main.hs
aoc-7/: CHANGELOG.md  aoc7.cabal
aoc-7/app/: Main.hs
aoc-8/: CHANGELOG.md  aoc8.cabal
aoc-8/app/: Main.hs
aoc-9/: CHANGELOG.md  aoc9.cabal
aoc-9/app/: Main.hs
